syntax = "proto3";

package apiKey;

import "github.com/confluentinc/ccloudapis/auth/v1/auth.proto";

service ApiKey {

  rpc Create(ccloudapis.auth.v1.CreateAPIKeyRequest) returns (ccloudapis.auth.v1.CreateAPIKeyReply) {}
  rpc Delete(ccloudapis.auth.v1.DeleteAPIKeyRequest) returns (ccloudapis.auth.v1.DeleteAPIKeyReply) {}
}
